--- a/bower.json
+++ b/bower.json
@@ -11,12 +11,12 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "parse": "~1.3.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
-    "angular-scenario": "~1.3.0",
-    "parse": "~1.3.3"
+    "angular-scenario": "~1.3.0"
   },
   "appPath": "app"
 }
