--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "parse": "~1.3.3"
+    "parse": "~1.3.3",
+    "angular-promise-tracker": "~2.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
