--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "parse": "~1.3.3",
-    "angular-promise-tracker": "~2.1.0"
+    "angular-busy": "~4.1.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
