--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "parse": "~1.3.3",
-    "angular-busy": "~4.1.2"
+    "angular-busy": "~4.1.2",
+    "underscore": "~1.7.0",
+    "font-awesome": "~4.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
